<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/table_background"
    tools:context="com.batodev.jigsawpuzzle.activity.PuzzleActivity">

    <TextView
        android:id="@+id/stopwatchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="40dp"
        android:background="#80000000"
        android:fontFamily="monospace"
        android:gravity="center"
        android:padding="2dp"
        android:text="00:00"
        android:textColor="@android:color/white"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,SmallSp" />

    <com.otaliastudios.zoom.ZoomLayout
        android:id="@+id/zoomableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical|horizontal"
        app:flingEnabled="false"
        app:hasClickableChildren="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:oneFingerScrollEnabled="false">
        <!--        app:alignment="center"-->
        <!--        app:animationDuration="280"-->
        <!--        app:horizontalPanEnabled="true"-->
        <!--        app:maxZoom="2.5"-->
        <!--        app:maxZoomType="zoom"-->
        <!--        app:minZoom="1"-->
        <!--        app:minZoomType="zoom"-->
        <!--        app:overPinchable="true"-->
        <!--        app:overScrollHorizontal="true"-->
        <!--        app:overScrollVertical="true"-->
        <!--        app:scrollEnabled="true"-->
        <!--        app:threeFingersScrollEnabled="true"-->
        <!--        app:transformation="centerInside"-->
        <!--        app:transformationGravity="auto"-->
        <!--        app:twoFingersScrollEnabled="true"-->
        <!--        app:verticalPanEnabled="true"-->
        <!--        app:zoomEnabled="true">-->

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="16dp"
                    android:adjustViewBounds="true"
                    android:alpha="1"
                    android:background="@drawable/border"
                    android:contentDescription="@string/app_name"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintDimensionRatio="0.666667:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
    </com.otaliastudios.zoom.ZoomLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/puzzle_activity_we_are_cutting"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />

    <ImageView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.smb.glowbutton.NeonButton
        android:id="@+id/puzzle_activity_play_again"
        android:layout_margin="30dp"
        android:text="@string/puzzle_activity_play_again"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:nb_cornerRadius="30dp"
        app:nb_disabledStateColor="@android:color/darker_gray"
        app:nb_drawableEnd="@drawable/ic_gamepad_36dp"
        app:nb_drawablePadding="10dp"
        app:nb_drawableStart="@drawable/ic_gamepad_36dp"
        app:nb_gradientEnd="@color/colorAccent"
        app:nb_gradientStart="@color/colorPrimary"
        app:nb_text="@string/puzzle_activity_play_again"
        app:nb_textColor="@color/colorAccent"
        app:nb_textSize="18dp"
        app:nb_textStyle="normal" />

</androidx.constraintlayout.widget.ConstraintLayout>
