...
        android:layout_height="wrap_content"
        android:layout_below="@id/highScoreDifficulty"
        android:layout_marginTop="16dp"
        android:orientation="vertical" />

    <com.smb.glowbutton.NeonButton
        android:id="@+id/highScoreOkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/highScoreListContainer"
        android:layout_marginTop="16dp"
        app:nb_cornerRadius="30dp"
        app:nb_disabledStateColor="@android:color/darker_gray"
...
