...
        android:id="@+id/how_many_puzzles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:padding="2dp"
        android:textSize="20sp"
        android:labelFor="@id/difficulty_spinner"
        android:layout_below="@id/play_sounds_checkbox"
        android:text="@string/how_many_puzzles" />

    <Spinner
        android:id="@+id/difficulty_spinner"
        android:padding="8dp"
        android:layout_below="@id/how_many_puzzles"
        android:background="@drawable/rounded_spinner_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.smb.glowbutton.NeonButton
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/difficulty_spinner"
        android:layout_marginTop="16dp"
        app:nb_cornerRadius="30dp"
        app:nb_disabledStateColor="@android:color/darker_gray"
...
