...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.batodev.jigsawpuzzle.activity.ImagePickActivity"
    android:background="@drawable/table_background">

    <GridView
        android:id="@+id/grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
...
